tests/NormalTests/paczka1/small_fuzzy/33187427.err
Error in line 1: A471 A471 98,3
Error in line 2: RXf A933 27,8
